[package]
name = "ripgen_lib"
version = "0.1.2"
edition = "2021"
authors = ["d0nut <d0nut@resync.gg>", "youstin"]
description = "High-performance domain-name permutation generator."
keywords = ["bug", "bounty", "dnsgen", "recon", "security"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/resyncgg/ripgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
addr = "0"
fxhash = "0.2.1"
regex = { version = "1", optional = true }
lazy_static = { version = "1", optional = true }

[features]
dnsgen = ["regex", "lazy_static"]
default = []
